--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^0.1.4",
     "axios": "^0.25.0",
+    "clsx": "^1.1.1",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-use": "^17.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
